# oxidizemc-fabric

./: .gitignore  Cargo.toml
bindings/: Cargo.toml
bindings/java-proxy/net/fabricmc/api/: DedicatedServerModInitializer.java
bindings/src/: lib.rs
bindings/src/java/util/: function.rs
bindings/src/net/fabricmc/loader/: api.rs
bindings/src/org/: slf4j.rs
derive/: Cargo.toml
derive/src/: lib.rs
jsys/: Cargo.toml  cargo-check-output.txt  full-bindings.rs  java-oxide-output.txt  java-oxide.toml
jsys/java-proxy/net/fabricmc/api/: ClientModInitializer.java  ModInitializer.java
jsys/src/: java.rs  org.rs  util.rs
jsys/src/java/: lang.rs  util.rs
jsys/src/net/fabricmc/: api.rs
jsys/src/net/fabricmc/loader/api/: entrypoint.rs  metadata.rs
jsys/src/net/fabricmc/loader/api/metadata/: version.rs
src/: build.rs  lib.rs  util.rs
xtask/: Cargo.toml  build.rs
xtask/src/: genbinds.rs  main.rs  setup.rs  tools.rs
