[package]
name = "oxidizemc-fabric"
description = "Library for interfacing with the FabricMC APIs"
version = "0.0.0-dev.1"
edition = "2024"
authors = ["PitchBlackNights <pitchblacknights@proton.me>"]
repository = "https://github.com/oxidizemc/oxidizemc-fabric"
documentation = "https://docs.rs/oxidizemc-fabric"
keywords = ["java", "minecraft", "modding"]
categories = ["api-bindings"]
license = "MIT"
readme = "README.md"

[dependencies]
oxidizemc = { path = "../oxidizemc", default-features = false, features = ["default_no_derive"] }
# oxidizemc = { version = "0.1", default-features = false, features = ["default_no_derive"] }
oxidizemc-fabric-bindings = { path = "./bindings" }
# oxidizemc-fabric-bindings = "0.1"
java-oxide = "0.1"
toml = { version = "0.9", optional = true, features = ["parse", "serde"]}

[features]
default = [
    "build"
]
build = ["dep:toml", "oxidizemc/build"]

[workspace]
resolver = "2"
members = ["bindings", "xtask"]
