[package]
name = "oxidizemc-fabric-derive"
description = "Procedural macros reexported by `oxidizemc-fabric`"
version = "0.0.0-dev.1"
edition = "2024"
authors = ["PitchBlackNights <pitchblacknights@proton.me>"]
repository = "https://github.com/oxidizemc/oxidizemc-fabric"
documentation = "https://docs.rs/oxidizemc-fabric-derive"
keywords = ["java", "minecraft", "modding"]
categories = ["api-bindings"]
license = "MIT"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
